backend_llvm/src/snapshots/backend_llvm__ir_to_llvm__tests__if_elseif_else.snap
---
source: backend_llvm/src/ir_to_llvm.rs
expression: llvm_ir
---
; ModuleID = 'test'
source_filename = "test"

define i64 @test(i64 %x) {
entry:
  %gt_2 = icmp sgt i64 %x, 0
  br i1 %gt_2, label %bb1, label %bb2

bb1:                                              ; preds = %entry
  ret i64 1

bb2:                                              ; preds = %entry
  %lt_8 = icmp slt i64 %x, 0
  br i1 %lt_8, label %bb3, label %bb4

bb3:                                              ; preds = %bb2
  ret i64 -1

bb4:                                              ; preds = %bb2
  ret i64 0

bb5:                                              ; No predecessors!
  unreachable
}
