backend_llvm/src/snapshots/backend_llvm__ir_to_llvm__tests__nested_if_statements.snap
---
source: backend_llvm/src/ir_to_llvm.rs
expression: llvm_ir
---
; ModuleID = 'test'
source_filename = "test"

define i64 @test(i64 %x, i64 %y) {
bb0:
  %gt_2 = icmp sgt i64 %x, 0
  br i1 %gt_2, label %bb2, label %bb3

bb2:                                              ; preds = %bb0
  %gt_6 = icmp sgt i64 %y, 0
  br i1 %gt_6, label %bb5, label %bb6

bb3:                                              ; preds = %bb0
  ret i64 3

bb5:                                              ; preds = %bb2
  ret i64 1

bb6:                                              ; preds = %bb2
  ret i64 2

bb4:                                              ; No predecessors!
  unreachable

bb1:                                              ; No predecessors!
  unreachable
}
